l2 zad 2 Signed-off-by: kordelmichal <kordel.michal@gmail.com>

--- a/kryptografia/Project1/Project1/Project1.vcxproj
+++ b/kryptografia/Project1/Project1/Project1.vcxproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <ClCompile Include="crypto.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="maine.cpp" />
     <ClCompile Include="MP3Player.cpp" />
   </ItemGroup>
   <ItemGroup>
