--- a/kryptografia/Project1/Project1/Project1.vcxproj.filters
+++ b/kryptografia/Project1/Project1/Project1.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="crypto.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="MP3Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MP3Player.cpp">
+    <ClCompile Include="maine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
